--- a/myproject-tui/pyproject.toml
+++ b/myproject-tui/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "myproject-core",
+    "textual>=7.5.0",
 ]
 
 [build-system]
@@ -17,3 +18,8 @@ build-backend = "uv_build"
 
 [tool.uv.sources]
 myproject-core = { workspace = true }
+
+[dependency-groups]
+dev = [
+    "textual-dev>=1.8.0",
+]
