Added CLI support for running workflows

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 myproject_llm_base_url="https://openrouter.ai/api/v1"
 myproject_llm_api_key="sk1234"
 myproject_llm_model="nvidia/nemotron-3-nano-30b-a3b:free"
-
+myproject_path_working_directory="."
