--- a/myproject-core/pyproject.toml
+++ b/myproject-core/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "litellm>=1.81.7",
     "pydantic-settings>=2.12.0",
+    "python-frontmatter>=1.1.0",
 ]
 
 [build-system]
