--- a/workflows/sample_workflow_multi_agent.yaml
+++ b/workflows/sample_workflow_multi_agent.yaml
@@ -16,9 +16,9 @@ steps:
   - id: "agent_outline"
     type: "prompt_agent"
     params:
+      agent: "technical_writer_outline"
       prompt: |
         Create a detailed outline for a technical article about {{ inputs.writing_topic }}.
-        Break it down into an introduction, 3 main sections, and a conclusion.
         Ensure it is structured for a {{ inputs.content_length }} word article.
         Only write the content of the outline in your output.
       output_filename: "agent_outline.md"
@@ -26,66 +26,51 @@ steps:
   - id: "agent_drafting"
     type: "prompt_agent"
     params:
+      agent: "technical_writer_draft"
       prompt: |
-        Using the following outline, write a full technical draft:
+        Please write the article based on the outine below. Target length is {{ inputs.content_length }} words. 
         
         {{ steps.agent_outline.content }}
-        
-        Target length is {{ inputs.content_length }} words. 
-        Maintain a professional, developer-focused tone.
-        Only write the content of the draft in your output. DO NOT provide commentary or metadata beyond the content.
       output_filename: "agent_draft.md"
 
   - id: "agent_editing"
     type: "prompt_agent"
     params:
+      agent: "technical_writer_editor"
       prompt: |
-        You are a senior technical editor. Review and polish the following draft:
+        Review and polish the following draft:
         
         {{ steps.agent_drafting.content }}
         
-        Fix any grammatical errors and improve the flow between paragraphs and output an edited version.
-        Remember to remove any metadata or commentary such as number of words or commentary between and after sections.
-        Only write the output content of the article. DO NOT provide commentary or metadata beyond the content.
+        Target length is {{ inputs.content_length }} words. 
       output_filename: "agent_final.md"
 
   - id: "agent_twitter"
     type: "prompt_agent"
     params:
+      agent: "technical_writer_twitter"
       prompt: |
-        You are a social media strategist specializing in technical "Threads" for X/Twitter.
-        
         Source Material:
         {{ steps.agent_editing.content }}
-        
-        Task: 
-        Convert the technical article above into a compelling 5-8 tweet thread.
-        - Tweet 1 must be a "hook" that identifies a problem and promises a solution.
-        - Use bullet points for readability.
-        - End with a "Call to Action" or a summary thought.
-        - DO NOT use hashtags or emojis unless they add technical clarity.
-        
-        Output only the thread content, with tweets separated by "---".
       output_filename: "twitter_thread.md"
 
   - id: "agent_linkedin"
     type: "prompt_agent"
     params:
+      agent: "technical_writer_linkedin"
       prompt: |
-        You are a Thought Leader on LinkedIn focusing on Engineering Culture and Software Architecture.
-        
         Source Material:
         {{ steps.agent_editing.content }}
-        
-        Task:
-        Summarize the key takeaways of this article into a single LinkedIn post.
-        - Start with a strong, punchy opening line.
-        - Use a "Listicle" format for the middle section to highlight 3 key benefits of {{ inputs.writing_topic }}.
-        - The tone should be authoritative yet accessible.
-        - Conclude with a question to encourage comments and engagement.
-        
-        Output only the post content. No meta-commentary.
       output_filename: "linkedin_post.md"
+
+  - id: "agent_visual"
+    type: "prompt_agent"
+    params:
+      agent: "technical_writer_visual"
+      prompt: |
+        Source Material:
+        {{ steps.agent_editing.content }}
+      output_filename: "visual_recommendations.md"
 
 outputs:
   blog_post:
@@ -100,3 +85,6 @@ outputs:
   linkedin_post:
     description: "LinkedIn post of the article."
     value: "{{ steps.agent_linkedin.content }}"
+  visual_recs::
+    description: "Recommendations for visuals."
+    value: "{{ steps.agent_visual.content }}"
