Implemented file ingestion and sending files to agent's clipboard

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ wheels/
 
 # Ignore the workspaces directory where tmp inputs and outputs are stored
 workspaces/
+
+# Ignore the inbox directory where user drops their input files
+inbox/
