--- a/myproject-tools/pyproject.toml
+++ b/myproject-tools/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "myproject-core"
+name = "myproject-tools"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -8,15 +8,13 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "litellm>=1.81.7",
-    "myproject-tools",
-    "pydantic-settings>=2.12.0",
-    "python-frontmatter>=1.1.0",
+    "arxiv>=2.4.0",
+    "ddgs>=9.10.0",
+    "pymupdf-layout>=1.26.6",
+    "pymupdf4llm>=0.2.9",
+    "trafilatura>=2.0.0",
 ]
 
 [build-system]
 requires = ["uv_build>=0.9.27,<0.10.0"]
 build-backend = "uv_build"
-
-[tool.uv.sources]
-myproject-tools = { workspace = true }
