--- a/myproject-server/pyproject.toml
+++ b/myproject-server/pyproject.toml
@@ -8,8 +8,12 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi>=0.128.0",
+    "alembic>=1.18.4",
+    "fastapi[standard]>=0.128.0",
     "myproject-core",
+    "pwdlib[argon2]>=0.3.0",
+    "pyjwt>=2.11.0",
+    "sqlmodel>=0.0.33",
 ]
 
 [build-system]
