--- a/myproject-server/pyproject.toml
+++ b/myproject-server/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pwdlib[argon2]>=0.3.0",
     "pyjwt>=2.11.0",
     "sqlmodel>=0.0.33",
+    "sse-starlette>=3.2.0",
 ]
 
 [build-system]
