--- a/myproject-frontend/package.json
+++ b/myproject-frontend/package.json
@@ -15,10 +15,12 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
     "zod": "^4.3.6"
   },
