--- a/myproject-server/pyproject.toml
+++ b/myproject-server/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "alembic>=1.18.4",
+    "apscheduler>=3.11.2",
     "fastapi[standard]>=0.128.0",
     "myproject-core",
     "pwdlib[argon2]>=0.3.0",
