--- a/workflows/arxiv_summary.yaml
+++ b/workflows/arxiv_summary.yaml
@@ -11,15 +11,16 @@ steps:
   - id: "arxiv_download"
     type: "arxiv_download"
     params:
-      arxiv_paper_id: "{{ inputs.paper_id }}"
+      arxiv_paper_ids: 
+        - "{{ inputs.paper_id }}"
 
   - id: "paper_summary"
     type: "prompt_agent"
     params:
       agent: "research_summary"
-      files_to_read:
-        - "{{ steps.arxiv_download.file_paths[1] }}"
-      prompt: "The paper to summary is in your clipboard"
+      files_to_read: "{{ steps.arxiv_download.file_paths}}"
+      prompts: 
+        - "The paper to summary is in your clipboard"
       write_response_to_file: True
       write_response_to_output: True
       output_filename: "paper_summary.md"
@@ -28,9 +29,9 @@ steps:
     type: "prompt_agent"
     params:
       agent: "research_critic"
-      files_to_read:
-        - "{{ steps.arxiv_download.file_paths[1] }}"
-      prompt: "The paper to analyze and provide critic is in your clipboard"
+      files_to_read: "{{ steps.arxiv_download.file_paths}}"
+      prompts: 
+        - "The paper to analyze and provide critic is in your clipboard"
       write_response_to_file: True
       write_response_to_output: True
       output_filename: "paper_review.md"
