--- a/workflows/web_search.yaml
+++ b/workflows/web_search.yaml
@@ -13,10 +13,11 @@ steps:
     type: "prompt_agent"
     params:
       agent: "simple_agent"
-      prompt: |
-        Please write a web search string for the user's query below. Write only the search string in your response. Nothing else. 
+      prompts: 
+        - |
+          Please write a web search string for the user's query below. Write only the search string in your response. Nothing else. 
 
-        {{ inputs.user_query }}
+          {{ inputs.user_query }}
 
   - id: "web_search"
     type: "web_search"
@@ -28,10 +29,11 @@ steps:
     params:
       agent: "simple_agent"
       files_to_read: "{{ steps.web_search.file_paths }}"
-      prompt: |
-        Please answer user's questions below based on the relevant web articles in your clipboard 
+      prompts: 
+        - |
+          Please answer user's questions below based on the relevant web articles in your clipboard 
 
-        {{ inputs.user_query }}
+          {{ inputs.user_query }}
       output_filename: "answer.md"
       write_response_to_output: True
 
