Fixed: file input fail to resolve when input name is not file_inputs

--- a/workflows/simple_single_agent.yaml
+++ b/workflows/simple_single_agent.yaml
@@ -1,4 +1,4 @@
-name: "Sample Agent Workflow"
+name: "Simple Agent"
 description: "Ingest input files to agent to answer question."
 version: "1.0"
 
