--- a/workflows/writing_arxiv.yaml
+++ b/workflows/writing_arxiv.yaml
@@ -1,4 +1,4 @@
-name: "Writing technical blog post about an Arxiv paper"
+name: "Write about Arxiv Paper"
 description: "A sample multi-step writing workflow."
 version: "1.0"
 
