--- a/workflows/arxiv_search_new.yaml
+++ b/workflows/arxiv_search_new.yaml
@@ -1,4 +1,4 @@
-name: "Smart Arxiv Finder"
+name: "Search Arxiv Papers"
 description: "Search, download, and summarize relevant papers on Arxiv"
 version: "1.0"
 inputs:
