--- a/myproject-tools/pyproject.toml
+++ b/myproject-tools/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "arxiv>=2.4.0",
     "ddgs>=9.10.0",
+    "feedparser>=6.0.12",
     "pymupdf-layout>=1.26.6",
     "pymupdf4llm>=0.2.9",
     "trafilatura>=2.0.0",
